Small update to status in README

--- a/README
+++ b/README
@@ -20,7 +20,7 @@ Supported controllers
 Status
 ------
 
-This driver should be considered preliminary and not production-ready
+This driver should be considered beta-quality and not production-ready
 (for whatever value of "production" applies to Nintendo controllers).
 
 
